# lambdasoup

./: .gitignore  .travis.yml  LICENSE.md  Makefile  README.md  Soup.Infix.html  _tags  index.html  lambdasoup.opam  opam  type_Soup.Infix.html
.github/workflows/: main.yml  test.yml
docs/: CONTRIBUTING.md  LICENSE  descr  footer.html  header.html  postprocess.ml  style.css  top.html
src/: META  dune  jbuild  lambdasoup.mllib  opam  soup.ml  soup.mli  soup_ocamlnet_nethtml.ml  soup_ocamlnet_nethtml_scanner.mll
test/: dune  performance.ml  performance.py  read_file.ml  test.ml
test/dependency/: _tags  dependency.ml
test/pages/: list  list.html  quoted  quoted.html
test/performance/: performance.ml
