opam-version: "1.2"

version: "0.6.1"
homepage: "https://github.com/aantron/lambda-soup"
doc: "http://aantron.github.io/lambda-soup"
bug-reports: "https://github.com/aantron/lambda-soup/issues"
license: "BSD"

authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "https://github.com/aantron/lambda-soup.git"

depends: [
  "ocamlfind" {build & >= "1.6.3"}
  "ocamlbuild" {build}
  "markup" {>= "0.7.1"}
  "ounit" {test}
]

build: [
  [make "build"]
]
build-test: [
  [make "test"]
]
build-doc: [
  [make "docs"]
]
install: [make "ocamlfind-install"]
remove: ["ocamlfind" "remove" "lambdasoup"]
