opam-version: "1.2"

version: "dev"
homepage: "https://github.com/aantron/lambdasoup"
doc: "http://aantron.github.io/lambdasoup"
bug-reports: "https://github.com/aantron/lambdasoup/issues"
license: "BSD"

authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"
dev-repo: "https://github.com/aantron/lambdasoup.git"

depends: [
  # This should be removed for release.
  "bisect_ppx" {>= "1.3.0"}
  # As a consequence of depending on Dune, Lambda Soup requires OCaml 4.02.3.
  "dune" {build}
  "markup" {>= "0.7.1"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
